--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- SEO -->
   <meta name="description" content="Join 10K+ women learning phone-based digital skills with Tabassum Zaidi. No experience needed. Start your flexible journey today.">
-  <meta property="og:image" content="https://i.ibb.co/xq5JXKMw/nida-pic.jpg">
+  <meta property="og:image" content="https://i.ibb.co/CKDnJB8m/Whats-App-Image-2026-01-30-at-7-43-53-PM.jpg">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -480,7 +480,7 @@
   <div class="container">
     <div class="row g-4 align-items-center">
       <div class="col-lg-6 animate-stagger" style="--order:1;">
-        <img src="https://i.ibb.co/xq5JXKMw/nida-pic.jpg" alt="Tabassum Zaidi - Mentor" class="about-img" loading="lazy">
+        <img src="https://i.ibb.co/CKDnJB8m/Whats-App-Image-2026-01-30-at-7-43-53-PM.jpg" alt="Tabassum Zaidi - Mentor" class="about-img" loading="lazy">
       </div>
       <div class="col-lg-6 animate-stagger about-content" style="--order:2;">
         <div class="badge-custom mb-2 glow-pulse">💫 Your Coach</div>
@@ -615,23 +615,23 @@
         <div class="accordion" id="faqAccordion">
           <div class="accordion-item glow-border">
             <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#faq1">What kind of work will I be doing?</button></h2>
-            <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">Digital skills: social media, content creation, digital marketing. 100% legitimate.</div></div>
+            <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">You'll be learning and applying practical digital skills such as social media handling, content creation, and digital marketing, based on real-world systems.</div></div>
           </div>
           <div class="accordion-item glow-border">
             <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq2">When can I expect results?</button></h2>
-            <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">Most students see first rewards within 4 weeks; steady growth in 2–3 months with consistent effort.</div></div>
+            <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">Results depend on your consistency, learning speed, and implementation. Some people see progress early, while others take time. Complete clarity is shared when you connect with me.</div></div>
           </div>
           <div class="accordion-item glow-border">
             <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq3">Do I need any prior experience?</button></h2>
-            <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">No experience needed! Step-by-step guidance from zero to confident.</div></div>
+            <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">No prior experience is required. The system is beginner-friendly and you're guided step by step.</div></div>
           </div>
           <div class="accordion-item glow-border">
-            <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq4">What support will I get?</button></h2>
-            <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">Daily mentorship, 24/7 WhatsApp, weekly calls & community.</div></div>
+            <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq4">Is there any investment?</button></h2>
+            <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">Yes, a one-time investment is required to access professional skill packages and the earning system. For complete clarity about the cost and inclusions, you can contact me directly — I'll explain everything honestly and transparently, with no pressure.</div></div>
           </div>
           <div class="accordion-item glow-border">
-            <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq5">Is there any investment?</button></h2>
-            <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">A single nominal training fee – no hidden costs ever.</div></div>
+            <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#faq5">What support will I get?</button></h2>
+            <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion"><div class="accordion-body text-muted">✔ Complete step-by-step guidance from basics to execution<br>✔ WhatsApp support for doubts & clarity<br>✔ Regular follow-ups so you don't feel stuck<br>✔ Beginner-friendly hand-holding till you gain confidence<br>✔ Genuine support — no confusion, no false promises</div></div>
           </div>
         </div>
       </div>
